--- a/app/src/main/res/layout/activity_call_rec.xml
+++ b/app/src/main/res/layout/activity_call_rec.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
     tools:context=".CallRecActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Call"
+    android:layout_centerVertical="true"
+    android:id="@+id/btn_call"/>
+</RelativeLayout>
